--- a/static/index.html
+++ b/static/index.html
@@ -100,7 +100,8 @@
       </div>
       <button style='margin-left:0px;' class='material-icons chrome-tab' data-add-tab id='createTab'
         onclick='newTab("ht://newtab")'>add</button>
-<button style='margin-left:5px;' class='material-icons chrome-tab' data-add-tab id='createTab' onclick='<button style='margin-left:5px;' class='material-icons chrome-tab' data-add-tab id='createTab' onclick='javascript:(function () { var script = document.createElement('script'); script.src="https://cdn.jsdelivr.net/npm/eruda"; document.body.append(script); script.onload = function () { eruda.init(); } })();'></button>
+<button style='margin-left:5px;' class='material-icons chrome-tab' data-add-tab id='createTab' onclick='<button style='margin-left:5px;' class='material-icons chrome-tab' data-add-tab id='createTab'
+	onclick='javascript:(function () { var script = document.createElement(\'script\'); script.src="https://cdn.jsdelivr.net/npm/eruda"; document.body.append(script); script.onload = function () { eruda.init(); } })();'></button>
       <div class='mock-browser-content'>
         <button id='urlbutton'
           onclick='document.getElementById(getActiveFrameId()).src = getBack(getActiveFrameId())'><svg
