--- a/static/index.html
+++ b/static/index.html
@@ -18,9 +18,9 @@
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no'>
-  <meta name="description" content="Hypertabs" >
+  <meta name="description" content="Jayden's Toy" >
   <!-- Open Graph tags -->
-  <meta property="og:title" content="Hypertabs">
+  <meta property="og:title" content="Jayden's Toy">
   <meta property="og:image" content="/icon.png">
   <!-- End Open Graph Tags -->
   <meta name="googlebot" content="index, follow, snippet" />
@@ -100,9 +100,7 @@
       </div>
       <button style='margin-left:0px;' class='material-icons chrome-tab' data-add-tab id='createTab'
         onclick='newTab("ht://newtab")'>add</button>
-<button style='margin-left:5px;' class='material-icons chrome-tab' data-add-tab id='createTab' onclick='<button style='margin-left:5px;' class='material-icons chrome-tab' data-add-tab id='createTab'
-	onclick='javascript:(function () { var script = document.createElement("script"); script.src="https://cdn.jsdelivr.net/npm/eruda"; document.body.append(script); script.onload = function () { eruda.init(); } })();'></button>
-      <div class='mock-browser-content'>
+	<div class='mock-browser-content'>
         <button id='urlbutton'
           onclick='document.getElementById(getActiveFrameId()).src = getBack(getActiveFrameId())'><svg
             xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#757575"
