--- a/static/c.html
+++ b/static/c.html
@@ -31,6 +31,13 @@
 			</p>
 			<div class="btns">
 				<div
+					onclick="location.href=__uv$config.prefix+xor.encode('https://poop.com/')"
+					class="crm"
+				>
+					<img class="icn" id="lu" src="/contrib/luphoria.png" />
+					<a class="btn">Jayden</a>
+				</div>
+				<div
 					onclick="location.href=__uv$config.prefix+xor.encode('https://github.com/B3ATDROP3R')"
 					class="crm"
 				>
